--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,10 +9,14 @@ environment:
 
 dependencies:
   intl: "^0.15.5"
+  json_annotation: ^3.0.0
+  cached_network_image: ^1.0.0
   flutter:
     sdk: flutter
 
 dev_dependencies:
+  build_runner: ^1.0.0
+  json_serializable: ^3.2.0
   flutter_test:
     sdk: flutter
 
