--- a/example/android/app/src/main/AndroidManifest.xml
+++ b/example/android/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
 
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="meiqia_plugin_example"
+        android:label="flutter_util_example"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
